# OpenCV_practice

ch1/: CMakeLists.txt  Fifth_capture.cpp  First_imread.cpp  Forth_canny.cpp  README.md  Second_erode.cpp  Sixth_camera.cpp  Third_blur.cpp
ch1 /: README.txt
ch2/: CMakeLists.txt  First_capture.cpp  README.md  Second_OpticalFlow.cpp  Third_lkdemo.cpp
p/: CMakeLists.txt  demo.cpp  imagebinoculartest.cpp  p.kdev4
